best solution section is ready for mobile screens

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         </div>
     </section>
-    <div class="container  hide-xxl hide-xl hide-lg">
+    <div class="container  hide-xxl hide-xl hide-lg mt-5 mb-5">
         <div class="art-title d-flex justify-content-between ">
             <span class="mt-3 mb-3 ">
                 <h4 style="color: #0F172A;">Featured art categories</h4>
@@ -408,7 +408,7 @@
     <!-- Expanding services  -->
 
     <!-- Best solution  -->
-    <section class="best-solution">
+    <section class="best-solution hide-md hide-xs hide-sm">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
@@ -431,6 +431,34 @@
                 </div>
                 <div class="col-lg-5">
                     <img src="./assets/images/col-content.png" style="height: 320px;margin-top: 30px;" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="best-solution hide-xxl hide-xl hide-lg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img src="./assets/images/col-content.png" class="img-fluid best-solution-img mx-auto"
+                        style="margin-top: 30px; margin-bottom: 30px;" alt="">
+                </div>
+                <div class="col-lg-12">
+                    <h3 style="color: #ffff;">Best solutions for your demanding collection</h3>
+                    <div style="font-size: 14px; font-weight: 400; line-height: 28.8px;color: #ffff;margin-top: 24px;">
+                        Odio vulputate
+                        cras
+                        vel lacinia
+                        turpis volutpat adipiscing. Sollicitudin at velit, blandit tempus nunc in.</div>
+                    <div style="font-size: 14px; font-weight: 400; line-height: 28.8px;color: #ffff;margin-top: 24px;">
+
+                        <div> <img src="./assets/images/check.png" alt="">
+                            Interdum volutpat turpis malesuada ac turpis.</div>
+                        <div> <img src="./assets/images/check.png" alt="">
+                            Tortor ipsum pretium quis nunc.</div>
+                        <div> <img src="./assets/images/check.png" alt="">
+                            Vitae odio a id purus in.</div>
+                    </div>
+                    <button class="explore-xinder-button mb-4 ">Explore Xinder</button>
                 </div>
             </div>
         </div>
