--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
     <!-- Expanding services  -->
 
     <!-- Best solution  -->
-    <section class="best-solution hide-md hide-xs hide-sm">
+    <section class="best-solution hide-lg hide-md hide-xs hide-sm">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
@@ -435,7 +435,7 @@
             </div>
         </div>
     </section>
-    <section class="best-solution hide-xxl hide-xl hide-lg">
+    <section class="best-solution hide-xxl hide-xl ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
