--- a/index.html
+++ b/index.html
@@ -466,7 +466,9 @@
     <!-- Best solution  -->
 
     <!-- Art gal  -->
-    <!-- <section class="art-gal">
+
+
+    <section class="art-gal hide-md hide-sm hide-xs">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -484,7 +486,27 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
+    <section class="art-gal hide-xxl hide-xl hide-lg mt-5 mb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <img src="./assets/images/video.png" class="hover img-fluid " alt="">
+                </div>
+                <div class="col-12 art-gal-content" style="margin: 90px 0px 90px;">
+                    <div style="font-size: 20px;text-align: center;" class="mx-auto "><span
+                            style="color: #475569;">Marie Poirot,
+                            Co-Founder </span><span style="color: #2563EB;">Art-Gal</span>
+                    </div>
+                    <div style="line-height: 30.4px;" class="mt-3 text-center ">
+                        “Id urna, nisl, ut quam. Diam suspendisse fringilla quam arcu mattis est velit in. Nibh in purus
+                        sit
+                        convallis phasellus ut. Neque suspendisse a habitasse commodo.”
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Art gal  -->
 
     <!-- Be incredible  -->
