be incredible section has been responsive for mobile screens

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                             style="color: #475569;">Marie Poirot,
                             Co-Founder </span><span style="color: #2563EB;">Art-Gal</span>
                     </div>
-                    <div style="line-height: 30.4px;" class="mt-3 text-center ">
+                    <div style="line-height: 30.4px;font-size: 16px;" class="mt-3 text-center ">
                         “Id urna, nisl, ut quam. Diam suspendisse fringilla quam arcu mattis est velit in. Nibh in purus
                         sit
                         convallis phasellus ut. Neque suspendisse a habitasse commodo.”
@@ -510,7 +510,7 @@
     <!-- Art gal  -->
 
     <!-- Be incredible  -->
-    <!-- <section class="be-incredible">
+    <section class="be-incredible hide-md hide-sm hide-xs">
         <div class="container">
             <div class="row">
                 <div class="col-4">
@@ -526,7 +526,26 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
+    <section class="be-incredible hide-xxl hide-xl hide-lg">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <img src="./assets/images/row.png" class="img-fluid " alt="">
+                </div>
+                <div class="col-12 mb-4">
+                    <h3 style="color: #ffff;" class="text-center ">Be incredible</h3>
+                    <div style="font-size: 16px; font-weight: 400; line-height: 28.8px;color: #ffff;margin-top: 24px;"
+                        class="text-center">
+                        Nec ultricies eget placerat ultricies eleifend dignissim aliquet sapien. Senectus vestibulum,
+                        eget erat at et congue cursus pretium.</div>
+
+                    <button class="explore-xinder-button d-flex justify-content-center ">Explore Xinder</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <!-- Be incredible  -->
 
 
