useless slider has been removed

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     <!-- Be incredible  -->
 
 
-    <!-- <div class="container">
+    <div class="container">
         <div class="row">
             <div class="col-1">
                 <a href="#" class="btn btn-secondary float-left" id="prev-slide">Previous</a>
@@ -571,7 +571,7 @@
                 <a href="#" class="btn btn-secondary float-right" id="next-slide">Next</a>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!-- Art events  -->
     <!-- <section class="art-events">
