art events section has been responsive

--- a/index.html
+++ b/index.html
@@ -549,80 +549,61 @@
     <!-- Be incredible  -->
 
 
-    <div class="container">
-        <div class="row">
-            <div class="col-1">
-                <a href="#" class="btn btn-secondary float-left" id="prev-slide">Previous</a>
-            </div>
-            <div class="col-10">
-                <div class="slider-container">
-                    <div class="slider-card active">
-                        <img src="./assets/images/color.png" alt="Image 1">
-                    </div>
-                    <div class="slider-card">
-                        <img src="./assets/images/color.png" alt="Image 2">
-                    </div>
-                    <div class="slider-card">
-                        <img src="./assets/images/color.png" alt="Image 3">
-                    </div>
-                </div>
-            </div>
-            <div class="col-1">
-                <a href="#" class="btn btn-secondary float-right" id="next-slide">Next</a>
-            </div>
-        </div>
-    </div>
-
     <!-- Art events  -->
-    <!-- <section class="art-events">
+    <section class="art-events">
         <div class="container">
             <div class="art-title d-flex justify-content-between " style="margin-bottom: 24px;">
                 <span>
-                    <h3 style="color: #0F172A;">Art events</h3>
+                    <h3 style="color: #0F172A;" class="art-events-heading">Art events</h3>
                 </span>
-                <span class="mt-1 sponsor-img-categories categories mt-3 ">Explore All Events<img
+                <span class="mt-1 sponsor-img-categories categories">Explore All Events<img
                         src="./assets/images/arrow-right.png" alt=""></span>
             </div>
             <div class="d-flex justify-content-evenly ">
-                <div class="card hover sponsor-img-categories" style="width: 22rem;border: none;">
-                    <img src="./assets/images/art-card.png" class="card-img-top" alt="...">
-                    <div class="card-body p-0 ">
-                        <div
-                            style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
-                            Wild Horse Event</div>
-                        <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui scelerisque
-                            ut eu purus aliquam
-                            vitae habitasse.
+                <div class="row">
+                    <div class="col-lg-4 col-md-5 card hover sponsor-img-categories mt-2" style="border: none;">
+                        <img src="./assets/images/art-card.png" class="card-img-top" alt="...">
+                        <div class="card-body p-0 ">
+                            <div
+                                style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
+                                Wild Horse Event</div>
+                            <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui
+                                scelerisque
+                                ut eu purus aliquam
+                                vitae habitasse.
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="card hover sponsor-img-categories" style="width: 22rem;border: none;">
-                    <img src="./assets/images/color.png" class="card-img-top" alt="...">
-                    <div class="card-body p-0 ">
-                        <div
-                            style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
-                            Great Colors</div>
-                        <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui scelerisque
-                            ut eu purus aliquam
-                            vitae habitasse.
+                    <div class="col-lg-4 col-md-5 card hover sponsor-img-categories mt-2" style="border: none;">
+                        <img src="./assets/images/color.png" class="card-img-top" alt="...">
+                        <div class="card-body p-0 ">
+                            <div
+                                style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
+                                Great Colors</div>
+                            <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui
+                                scelerisque
+                                ut eu purus aliquam
+                                vitae habitasse.
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="card hover sponsor-img-categories" style="width: 22rem;border: none;">
-                    <img src="./assets/images/father-day.png" class="card-img-top" alt="...">
-                    <div class="card-body p-0 ">
-                        <div
-                            style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
-                            Happy Father’s Day</div>
-                        <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui scelerisque
-                            ut eu purus aliquam
-                            vitae habitasse.
+                    <div class="col-lg-4 col-md-4 card hover sponsor-img-categories mt-2" style="border: none;">
+                        <img src="./assets/images/father-day.png" class="card-img-top" alt="...">
+                        <div class="card-body p-0 ">
+                            <div
+                                style="font-size: 24px; font-weight: 700;line-height: 26.4px;margin-top: 24px;margin-bottom: 8px;">
+                                Happy Father’s Day</div>
+                            <div style="font-size: 18px;font-weight: 400;line-height: 28.8px;">Egestas elit dui
+                                scelerisque
+                                ut eu purus aliquam
+                                vitae habitasse.
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Art events  -->
 
     <!-- Add more  -->
