--- a/index.html
+++ b/index.html
@@ -487,11 +487,12 @@
             </div>
         </div>
     </section>
-    <section class="art-gal hide-xxl hide-xl hide-lg mt-5 mb-5">
+    <section class="art-gal hide-xxl hide-xl hide-lg mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <img src="./assets/images/video.png" class="hover img-fluid " alt="">
+                    <img src="./assets/images/video.png" class="hover img-fluid d-flex justify-content-center mx-auto "
+                        alt="">
                 </div>
                 <div class="col-12 art-gal-content" style="margin: 90px 0px 90px;">
                     <div style="font-size: 20px;text-align: center;" class="mx-auto "><span
@@ -607,7 +608,7 @@
     <!-- Art events  -->
 
     <!-- Add more  -->
-    <!-- <section class="add-more">
+    <section class="add-more hide-md hide-sm hide-xs">
         <div class="container">
             <div class="row">
                 <div class="col-8">
@@ -615,78 +616,97 @@
                     <button class="explore-xinder-button">Join Now</button>
                 </div>
                 <div class="col-4">
-                    <img src="./assets/images/add-more character.png" style="height: 400px;margin-top: 80px;" alt="">
+                    <img src="./assets/images/add-more character.png" class="img-fluid " style="margin-top: 80px;"
+                        alt="">
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
+    <section class="add-more hide-xxl hide-xl hide-lg">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <img src="./assets/images/add-more character.png"
+                        class="img-fluid d-flex justify-content-center mx-auto" style="margin-top: 80px;" alt="">
+                </div>
+                <div class="col-12">
+                    <h3 class="text-center" style="color: #ffff;margin-top: 20px;">Add more masterpieces to your
+                        growing collection</h3>
+                    <button class="explore-xinder-button d-flex justify-content-center mb-5">Join Now</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <!-- Add more  -->
 
     <!-- Footer  -->
-    <!-- <footer class="footer">
+    <footer class="footer hide-md hide-sm hide-xs">
         <div class="container">
-            <div class="list d-flex justify-content-evenly ">
-                <ul>
-                    <li><img src=" ./assets/images/categories.png" alt="">
-                    </li>
-                    <li class="foot-li">User Interface</li>
-                    <li class="foot-li">User Experience</li>
-                    <li class="foot-li">Digital Media</li>
-                    <li class="foot-li">Lifestyle</li>
-                    <li class="foot-li">Programming</li>
-                    <li class="foot-li">Animation</li>
+            <div class="row">
+                <div class="list d-flex justify-content-evenly ">
+                    <ul class="col-lg-2">
+                        <li><img src=" ./assets/images/categories.png" alt="">
+                        </li>
+                        <li class="foot-li">User Interface</li>
+                        <li class="foot-li">User Experience</li>
+                        <li class="foot-li">Digital Media</li>
+                        <li class="foot-li">Lifestyle</li>
+                        <li class="foot-li">Programming</li>
+                        <li class="foot-li">Animation</li>
 
-                </ul>
-                <ul>
-                    <li><img src=" ./assets/images/product.png" alt="">
-                    </li>
-                    <li class="foot-li">Pricing</li>
-                    <li class="foot-li">Overview</li>
-                    <li class="foot-li">Browse</li>
-                    <li class="foot-li">Accessibility</li>
-                    <li class="foot-li">Five</li>
-                    <li class="foot-li">Changelog</li>
-                </ul>
-                <ul>
-                    <li><img src=" ./assets/images/solution.png" alt="">
-                    </li>
-                    <li class="foot-li">Brainstorming</li>
-                    <li class="foot-li">Ideation</li>
-                    <li class="foot-li">Wireframing</li>
-                    <li class="foot-li">Research</li>
-                    <li class="foot-li">Design</li>
-                    <li class="foot-li">Concept</li>
-                </ul>
-                <ul>
-                    <li><img src=" ./assets/images/resources.png" alt="">
-                    </li>
-                    <li class="foot-li">Help Center</li>
-                    <li class="foot-li">Blog</li>
-                    <li class="foot-li">Tutorials</li>
-                    <li class="foot-li">FAQs</li>
-                    <li class="foot-li">Community</li>
-                    <li class="foot-li">Events</li>
-                </ul>
-                <ul>
-                    <li><img src=" ./assets/images/support.png" alt="">
-                    </li>
-                    <li class="foot-li">Contact Us</li>
-                    <li class="foot-li">Developers</li>
-                    <li class="foot-li">Documentation</li>
-                    <li class="foot-li">Integrations</li>
-                    <li class="foot-li">Reports</li>
-                    <li class="foot-li">Webinar</li>
-                </ul>
-                <ul>
-                    <li><img src=" ./assets/images/company.png" alt="">
-                    </li>
-                    <li class="foot-li">About</li>
-                    <li class="foot-li">Press</li>
-                    <li class="foot-li">Events</li>
-                    <li class="foot-li">Careers</li>
-                    <li class="foot-li">Customers</li>
-                    <li class="foot-li">Partners</li>
-                </ul>
+                    </ul>
+                    <ul class="col-lg-2">
+                        <li><img src=" ./assets/images/product.png" alt="">
+                        </li>
+                        <li class="foot-li">Pricing</li>
+                        <li class="foot-li">Overview</li>
+                        <li class="foot-li">Browse</li>
+                        <li class="foot-li">Accessibility</li>
+                        <li class="foot-li">Five</li>
+                        <li class="foot-li">Changelog</li>
+                    </ul>
+                    <ul class="col-lg-2">
+                        <li><img src=" ./assets/images/solution.png" alt="">
+                        </li>
+                        <li class="foot-li">Brainstorming</li>
+                        <li class="foot-li">Ideation</li>
+                        <li class="foot-li">Wireframing</li>
+                        <li class="foot-li">Research</li>
+                        <li class="foot-li">Design</li>
+                        <li class="foot-li">Concept</li>
+                    </ul>
+                    <ul class="col-lg-2">
+                        <li><img src=" ./assets/images/resources.png" alt="">
+                        </li>
+                        <li class="foot-li">Help Center</li>
+                        <li class="foot-li">Blog</li>
+                        <li class="foot-li">Tutorials</li>
+                        <li class="foot-li">FAQs</li>
+                        <li class="foot-li">Community</li>
+                        <li class="foot-li">Events</li>
+                    </ul>
+                    <ul class="col-lg-2">
+                        <li><img src=" ./assets/images/support.png" alt="">
+                        </li>
+                        <li class="foot-li">Contact Us</li>
+                        <li class="foot-li">Developers</li>
+                        <li class="foot-li">Documentation</li>
+                        <li class="foot-li">Integrations</li>
+                        <li class="foot-li">Reports</li>
+                        <li class="foot-li">Webinar</li>
+                    </ul>
+                    <ul class="col-lg-2">
+                        <li><img src=" ./assets/images/company.png" alt="">
+                        </li>
+                        <li class="foot-li">About</li>
+                        <li class="foot-li">Press</li>
+                        <li class="foot-li">Events</li>
+                        <li class="foot-li">Careers</li>
+                        <li class="foot-li">Customers</li>
+                        <li class="foot-li">Partners</li>
+                    </ul>
+                </div>
             </div>
             <hr>
             <div class="d-flex justify-content-between" style="margin-top: 48px;">
@@ -707,7 +727,7 @@
                 habitasse. Semper posuere lectus consectetur aliquam et ullamcorper. Dictumst aenean justo fames diam
                 eget volutpat vestibulum elit. Blandit aliquet bibendum pellentesque turpis id penatibus faucibus id
                 nunc. Aenean rhoncus, erat pellentesque eu. Quis morbi condimentum phasellus in ultricies eu amet.</div>
-    </footer> -->
+    </footer>
     <!-- Footer  -->
 
 
