footer has been responsive

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                     <button class="explore-xinder-button">Explore Xinder</button>
                 </div>
                 <div class="col-5">
-                    <img src="./assets/images/row.png" alt="">
+                    <img src="./assets/images/row.png" class="img-fluid " alt="">
                 </div>
             </div>
         </div>
@@ -728,6 +728,155 @@
                 eget volutpat vestibulum elit. Blandit aliquet bibendum pellentesque turpis id penatibus faucibus id
                 nunc. Aenean rhoncus, erat pellentesque eu. Quis morbi condimentum phasellus in ultricies eu amet.</div>
     </footer>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start bg-light text-muted hide-xxl hide-xl hide-lg">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <!-- Left -->
+            <div class="me-5 d-none d-lg-block">
+                <span>Get connected with us on social networks:</span>
+            </div>
+            <!-- Left -->
+
+            <!-- Right -->
+            <div>
+                <a href="" class="me-4 text-reset">
+                    <img src="./assets/images/youtube.png" class="social-icons hover" alt="">
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <img src="./assets/images/facebook.png" class="social-icons hover" alt="">
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <img src="./assets/images/twitter.png" class="social-icons hover" alt="">
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <img src="./assets/images/instagram.png" class="social-icons hover" alt="">
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <img src="./assets/images/linkedin.png" class="social-icons hover" alt="">
+                </a>
+            </div>
+            <!-- Right -->
+        </section>
+        <!-- Section: Social media -->
+
+        <!-- Section: Links  -->
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <!-- Grid row -->
+                <div class="row mt-3">
+                    <!-- Grid column -->
+                    <div class="col-md-12 col-lg-4 col-xl-3  mx-auto mb-4">
+                        <!-- Content -->
+
+                        <p>
+                            In sed posuere sed
+                            ullamcorper feugiat.
+                            Lacinia elit neque,
+                            ipsum, non. Tellus
+                            mattis enim volutpat
+                            habitasse. Semper posuere lectus consectetur aliquam et ullamcorper. Dictumst aenean justo
+                            fames diam
+                            eget volutpat vestibulum elit. Blandit aliquet bibendum pellentesque turpis id penatibus
+                            faucibus id
+                            nunc. Aenean rhoncus, erat pellentesque eu. Quis morbi condimentum phasellus in ultricies eu
+                            amet.
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 col-6 mx-auto mb-4">
+                        <!-- Links -->
+                        <li><img class="mobile-footer-li" src=" ./assets/images/categories.png" alt="">
+                        </li>
+                        <li class="foot-li">User Interface</li>
+                        <li class="foot-li">User Experience</li>
+                        <li class="foot-li">Digital Media</li>
+                        <li class="foot-li">Lifestyle</li>
+                        <li class="foot-li">Programming</li>
+                        <li class="foot-li">Animation</li>
+
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 col-sm-6 mx-auto mb-4">
+                        <!-- Links -->
+                        <li><img class="mobile-footer-li" src=" ./assets/images/product.png" alt="">
+                        </li>
+                        <li class="foot-li">Pricing</li>
+                        <li class="foot-li">Overview</li>
+                        <li class="foot-li">Browse</li>
+                        <li class="foot-li">Accessibility</li>
+                        <li class="foot-li">Five</li>
+                        <li class="foot-li">Changelog</li>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto col-sm-6 mb-md-0 mb-4">
+                        <!-- Links -->
+                        <li><img class="mobile-footer-li" src=" ./assets/images/solution.png" alt="">
+                        </li>
+                        <li class="foot-li">Brainstorming</li>
+                        <li class="foot-li">Ideation</li>
+                        <li class="foot-li">Wireframing</li>
+                        <li class="foot-li">Research</li>
+                        <li class="foot-li">Design</li>
+                        <li class="foot-li">Concept</li>
+                    </div>
+                    <!-- Grid column -->
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto col-sm-6 mb-md-0 mb-4">
+                        <!-- Links -->
+                        <li><img class="mobile-footer-li" src=" ./assets/images/resources.png" alt="">
+                        </li>
+                        <li class="foot-li">Help Center</li>
+                        <li class="foot-li">Blog</li>
+                        <li class="foot-li">Tutorials</li>
+                        <li class="foot-li">FAQs</li>
+                        <li class="foot-li">Community</li>
+                        <li class="foot-li">Events</li>
+                    </div>
+                    <!-- Grid column --> <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <li><img class="mobile-footer-li" src=" ./assets/images/support.png" alt="">
+                        </li>
+                        <li class="foot-li">Contact Us</li>
+                        <li class="foot-li">Developers</li>
+                        <li class="foot-li">Documentation</li>
+                        <li class="foot-li">Integrations</li>
+                        <li class="foot-li">Reports</li>
+                        <li class="foot-li">Webinar</li>
+                    </div>
+                    <!-- Grid column --> <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <li><img class="mobile-footer-li" src=" ./assets/images/company.png" alt="">
+                        </li>
+                        <li class="foot-li">About</li>
+                        <li class="foot-li">Press</li>
+                        <li class="foot-li">Events</li>
+                        <li class="foot-li">Careers</li>
+                        <li class="foot-li">Customers</li>
+                        <li class="foot-li">Partners</li>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- Section: Links  -->
+
+        <!-- Copyright -->
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+            <div class="all-rights-text">@ 2023 Xinder, Inc. All rights reserved.</div>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
     <!-- Footer  -->
 
 
